[package]
name = "nss-iam-user"
version = "0.1.0"
authors = ["Edvard Makhlin <edvard.makhlin@iii.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
name = "nss_iam_user"

[dependencies]
libc = "0.2.55"
rand = "0.6.5"
pwhash = "0.3.0"
fern = { version = "0.5", features = ["syslog-4"] }
log = "0.4.6"
chrono = "0.4.6"
lazy_static = "1.3.0"
ctor = "0.1.9"
syslog = "4"
rusoto_core = "0.39.0"

serde = { version = "1.0", features = ["derive"] }
bincode = "1.1.4"
tokio = "0.1.7"
tokio-core = "0.1.7"
serde_urlencoded = "0.5.1"
futures = "0.1.16"
xml-rs = "0.7"
os_type="2.2"

[profile.release]
debug = true
opt-level = 'z'
# be careful with lto, it may break things
lto = true
codegen-units = 1
panic = 'abort'
